--- a/KutuphaneCore/Properties/Resources.resx
+++ b/KutuphaneCore/Properties/Resources.resx
@@ -118,46 +118,58 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="6586131_find_glass_magnifier_search_seo_icon1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\6586131_find_glass_magnifier_search_seo_icon1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="8675075_ic_fluent_notebook_regular_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\8675075_ic_fluent_notebook_regular_icon1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="3099385_woman_student_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\3099385_woman_student_icon1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="6586115_bar_chart_diagram_graph_report_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\6586115_bar_chart_diagram_graph_report_icon1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="8675099_ic_fluent_person_delete_regular_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\8675099_ic_fluent_person_delete_regular_icon1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="8675047_ic_fluent_person_arrow_right_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\8675047_ic_fluent_person_arrow_right_icon1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="5269101_book_education_library_notebook_read_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\5269101_book_education_library_notebook_read_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="3099385_woman_student_icon (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\3099385_woman_student_icon (1)1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="3099383_student_man_icon (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\3099383_student_man_icon (1)1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="8675208_ic_fluent_person_add_regular_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\8675208_ic_fluent_person_add_regular_icon2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="8675222_ic_fluent_person_edit_regular_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\8675222_ic_fluent_person_edit_regular_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="8675050_ic_fluent_notebook_question_mark_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\8675050_ic_fluent_notebook_question_mark_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="6586131_find_glass_magnifier_search_seo_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\6586131_find_glass_magnifier_search_seo_icon2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="1814089_account_user_person_profile_avatar_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\1814089_account_user_person_profile_avatar_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="8675228_ic_fluent_notebook_sync_regular_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\8675228_ic_fluent_notebook_sync_regular_icon1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="3099383_student_man_icon1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\3099383_student_man_icon2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="3099383_student_man_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\3099383_student_man_icon1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="8675120_ic_fluent_notebook_add_regular_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\8675120_ic_fluent_notebook_add_regular_icon1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="6586125_account_avatar_person_profile_user_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\6586125_account_avatar_person_profile_user_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="6586115_bar_chart_diagram_graph_report_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\6586115_bar_chart_diagram_graph_report_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="6586114_book_education_school_study_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\6586114_book_education_school_study_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="6586131_find_glass_magnifier_search_seo_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\6586131_find_glass_magnifier_search_seo_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="6586134_person_profile_remove_user_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\6586134_person_profile_remove_user_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="3592826_employee_human_member_office_remove_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\3592826_employee_human_member_office_remove_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="ogrEkle" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\ogrEkle.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="6586102_configuration_options_preferences_settings_tools_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\6586102_configuration_options_preferences_settings_tools_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="1329089_arrows_circle_refresh_replace_round_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\1329089_arrows_circle_refresh_replace_round_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="6586118_account_add_avatar_person_profile_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\6586118_account_add_avatar_person_profile_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="103412_text_book_remove_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\103412_text_book_remove_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="103415_text_book_settings_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\103415_text_book_settings_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="103409_text_add_book_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\103409_text_add_book_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
