--- a/KutuphaneCore/Kitap/KitapProfil.resx
+++ b/KutuphaneCore/Kitap/KitapProfil.resx
@@ -60,56 +60,56 @@
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAIAAAACACAYAAADDPmHLAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAAstSURBVHhe7Z1fbFxHFcZDS0HwgMQz8MYT8BYJxRu7Ia0g
-        CQ1qSXGAB4SKohZkp4UHWlEeFim+d23Hf+vYWzu1LdWO7VotSWqDaCJalIo2SRs7LQ911YSmaUURhMTQ
-        IlF4GOZsznVmvz273l3HvnPvzCf9FOfuzN1zvjO+/+94k5eXl5eXl5fXeqqhre2urWH4nkZ56icTBB9q
-        Tmv27+zv/yTba7+2BsG7UkKeNbG4pa3tc2yx3RKC99wcFhOxJRAC99w8Wtlme4VBLy6PVWTh6thD3NXL
-        0Ffb2z+fCcPfml7q/7/MH9srM2BCKrrJwvLYn2bV7K3c3ctQ04EDXyjyMwj+xR/Zq6KANVLRSxlt4e5e
-        IPSTF9srDFgueDEL10Y/Ondt/E5ehZch9JMX2ysMWCo4MXE+r+7q7yhqe1Oh09G2tl0c1oqsvU5RJl5s
-        x4vtFQYsFZ/Y3d9e1G490AdNlzmsFdl8nUKMF9rwYnuFAUvFJzZiAOx+rCOW760XKV5swzbbKwwYE4o4
-        8lp+XYtBZk69nt/w762XcvFiO7bZXmHAmFA5sN/MWzMVwfbSOtMA5sk22ysMWEpKAvtJRTfB9tI60wDm
-        yTbbKwxYSkoC+0lFN8H20jqTzvPvHS7OM70XgvwAQKj4+ya7i3KM5VJwXOfNUaE7To2pnf2dBTpfHC87
-        ABxh428GxXXeTEUeOjehtnXkVpbRz7TM0QGw+KVs9hNclo1TXANgcmlafetQV8lyWkaf4fKUE98DIXR5
-        Mo5BsG9qQFxOVPosLej9/Qfa95f0z62x/OavJgz4F78fWRO4vlqR1rkRPHJyWLUeH1J7x3pVY06ILZf7
-        NluWLmGikjm1gOsz+XpvRwHpswhpnRvN/meH1B1dcJVRbz2t/A1eq4qS1EiG1AKuL+L29px6aD5fgH6W
-        2hDSOuOABgFuCRrD8PtsW3pkJkhIZtQCri/ivpnHVtrQz1IbwlxX3DSP9mB802xbegQJOscOvUv62Vxe
-        HAAtxwaL2maC4CLblh6ZCbrKjt5OcQA8fGIY2/6bbUuPIEEn2dEnDwAC27Jt6REm6BpUfLo0LRWfwPZs
-        W3qECUbX6F1DKj6B/rBt6REmKJnjAlLxCfSHbUuPMEHJHBeQik+gP2xbeoQJSua4gFR8Av1h29IjTFAy
-        xwWk4hPoD9uWHmGCkjkuIBWfQH/YtvQIE9xo6EocPS2EBWnXy+gCjdSHqLdfBPaXik9gP7YtPcIE44DO
-        xc0iElQgqa1Jvf0izP5S8Qnsw7alR5hgHPgBEKMwwY2GimA+JBpBm+dKxay3XwT2l4pPYD+2LT3CBE0z
-        XWHijWmx+D+Hm0E04xfblh6ZCRKSQWmGih++NCYOACdvB0tGuAo+EKIHwBTblh6ZCRKSES5Cj4Q15Yof
-        XWsIgu+xbemRmSAhmeEa0kOhNOnD5uHh29i29MhMkpAMcQF6+qfl+FBhs4+/+URjENzDliVTfu5fS6CX
-        c4Q5hNZdcb0a5ilFmkNo3eUHgD3EMwBiejfQUwwVvzEMd3JZkiF6Lw4T2dYRql/O96mjbw6rM1dGSyZG
-        cHXuYPSJFydXm7PZT+tEig4eaWLI+YsjJUU3cXXuYNMnghcnV3pz9QMzIfrNX634Nxh1bu5g0yuCFydX
-        ep9VNNU5bfblYpfi4tzBplcEL06uMkHwvpkQ7fOlYlc9Z3CZ8+BVr1PU2y9mOMxkit6Hx4RO/730gI+o
-        cdbOd/krVlTNGYp0+mT7mQ2HmUw1z87eigndjAFQ79y/SZszmGArkyv9W/c3M6Fyu4Bq5+6td+7fpM0Z
-        HME2Jld6E/sbM6FH5/tLiuC5gekVwTYmVw1heJ+ZEJ0Gzl2QtwKeFA6ALd3dn9KJ/NVMio72/SCQMX0i
-        2MZkqyEIvoOJ0Wyfj871qaNLj5c9MHQR9IktTL4yQdCLyXnqoMz1DOu1LZv9uB4Er4pJeWoiltvBa5He
-        BXxFF/+8lIyndhI1ADK53N26+B9KiXhqh4qfmOcBqPh6n/VfTIIOAB+c7VFPvDKkfvf2SNHzAAvXxpZe
-        Xz7yWV5F4oS58mL3tLW9/ct6tH6AhrTMdKuTlw8XHfkiC8ujlxeXx5tPX5n4DK8uMcJ8ebFbKhzwheE5
-        0wiaN7f7DwNiwdOEmTPBlrglvdl/AI1wofgE5s2WOKRs9hZ90HfRNIE2+5JZxJPn82pXX/Xv5CcNdsUd
-        NQbBNtMAOuArt89/5eq42lnDhAxJhG1xR3rz320aQEf7UvEXro2ro29P1TQjRxJhW9yRTvqUaQCd6kkD
-        4Pm/PFl4v77aGTmSCtvijnTSRXf+TlySnwA+dulIyWQLacDMnWBb3JE+/fufacDLZe70zV6YFg1MOmbu
-        BNvijnTSH5kGlLvV6wdASqWTLtoFPOd3AW5JJ13VQeAL718/CKx2Zs6kwra4o0wQtJsG7PengW5JD4Am
-        04DChaB35N2AvxCURin1MZ34kmlCy4y8FSAmX8urb/pLwemSTvyHaESXvxnkkK7fEDptGtGUC9XBF/zt
-        YGe0JQy/qA34Jxryk+kedeKdyg+EJBnMl+1wUw1BcKfeEvwHTbm9PVStT/WokbPXHwlL03sBmCtbkU7R
-        69+ZMPyuLvKUTnZJ/+sf/qyVpD7nn8nl7tUFL3rww1Mf9KQv22q/6J1/HXCXlIinfthe++WLvz6wvXaL
-        NvsYOD3tu3esR7UeH1KPnBwWJ1L2lII+ssX2qnDAB/t8mhL9wbm8mKCnMqaPBNtsr+ho3wyYfvN98evH
-        9JJgm+0Vn+qtBEybfSkxT3WYXhJss73SA+BNM+CW44NiYhH3P32o5K9muAh58MAzh0r8wXZss73Su4Ci
-        9/zoL2RgUia++De4o6ujxB9swzbbKwwYEzI58OKI2tXnB0CEND8htmGb7RUGLBWeoOKfuWL//HsbRbn5
-        CbEd22yvMGCp+MTcpWTd2MG88CHP1cD+0ndIYD+22V5hwFLxibNX5YRtBfOSilwJ7C99hwT2Y5vtFQYs
-        FZ+QkrUZzEsqciWwv/QdEtiPbbZXGLBUfEJK1mYwL6nIlcD+0ndIYD+22V5hwFLxiSjBquf/twypyJWQ
-        1mFCB8J0QGwWn8B2bLO9woCl4hNRgkk9A5CKXAlpHYhTp4FRgmkZAL86eVh9o6ejAP2Mn0vrQJwcAEm9
-        DhAVdnJpWu2bGij5nJbRZ9UOAOeuA2CitoN5UVHzCxPq7sGuks8idg8cVIdevf5uI34mfYcE9mOb7RUG
-        LBWfkJK1Gcwrqzfz9DobLkeoDbXF5dJ3SGA/ttleYcBS8YmkXwiSuPfxzgLSZ4j0HRLYj222VxiwVHxi
-        /tITYsK2gnkhP32mtzCV7dl/jKqHj/WKbUyk75DAfmyzvcKApeIT4R9H1BltVtzXAcqdfyNSX+JrehPf
-        e6r0VbbhM4Nqe2f5XQS2Lwf2Y5vtFQYsFT+icDu4N/4zAOn0C5H67cl3qvk/lz+eobeZ9pbZJUjtJbAf
-        22yvkvhAiPQgBrId4twz0l3V083UhtqafSlnqa2E2Y9gm+1VrY+E0WNQcQ4CKv6Pf105RuL+pwcKg2D7
-        wXb1o6cGxDaVoD7Ul3Klx+CkNhIYL9tsr0ofCu0VE/NUh+klwTbbq61BsNcMmB4L3//skJicZ3VMLwm2
-        2V7xH4K+YAZNmz0/COrD9JFgm+2W3grswcCbcjnVPNqjWo4Nrnpg6LkB+sgW2y99LHAQg/esHbY3Acpm
-        b9EBd2ICnrXB7iZHjUFwj94lvCUl46mNTNL+EGSkzcPDtzXmcs16IEzqRN7Ai0We1aHiJ+bvAHp5eXl5
-        eXklVJs2/R87VELElH3gEwAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAAIAAAACACAYAAADDPmHLAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EQAACxEBf2RfkQAACy1JREFUeF7tnV9sXEcVxkNLQfCAxDPwxhPwFgnFG7shrSAJDWpJcYAHhIqiFmSn
+        hQdaUR4WKb53bcd/69hbO7Ut1Y7tWi1JaoNoIlqUijZJGzstD3XVhKZpRRGExNAiUXgY5mzOdWa/Pbve
+        Xce+c+/MJ/0U5+7M3XO+M77/73iTl5eXl5eXl9d6qqGt7a6tYfieRnnqJxMEH2pOa/bv7O//JNtrv7YG
+        wbtSQp41sbilre1zbLHdEoL33BwWE7ElEAL33Dxa2WZ7hUEvLo9VZOHq2EPc1cvQV9vbP58Jw9+aXur/
+        v8wf2yszYEIqusnC8tifZtXsrdzdy1DTgQNfKPIzCP7FH9mrooA1UtFLGW3h7l4g9JMX2ysMWC54MQvX
+        Rj86d238Tl6FlyH0kxfbKwxYKjgxcT6v7urvKGp7U6HT0ba2XRzWiqy9TlEmXmzHi+0VBiwVn9jd317U
+        bj3QB02XOawV2XydQowX2vBie4UBS8UnNmIA7H6sI5bvrRcpXmzDNtsrDBgTijjyWn5di0FmTr2e3/Dv
+        rZdy8WI7ttleYcCYUDmw38xbMxXB9tI60wDmyTbbKwxYSkoC+0lFN8H20jrTAObJNtsrDFhKSgL7SUU3
+        wfbSOpPO8+8dLs4zvReC/ABAqPj7JruLcozlUnBc581RoTtOjamd/Z0FOl8cLzsAHGHjbwbFdd5MRR46
+        N6G2deRWltHPtMzRAbD4pWz2E1yWjVNcA2ByaVp961BXyXJaRp/h8pQT3wMhdHkyjkGwb2pAXE5U+iwt
+        6P39B9r3l/TPrbH85q8mDPgXvx9ZE7i+WpHWuRE8cnJYtR4fUnvHelVjTogtl/s2W5YuYaKSObWA6zP5
+        em9HAemzCGmdG83+Z4fUHV1wlVFvPa38DV6ripLUSIbUAq4v4vb2nHpoPl+AfpbaENI644AGAW4JGsPw
+        +2xbemQmSEhm1AKuL+K+mcdW2tDPUhvCXFfcNI/2YHzTbFt6BAk6xw69S/rZXF4cAC3HBovaZoLgItuW
+        HpkJusqO3k5xADx8Yhjb/pttS48gQSfZ0ScPAALbsm3pESboGlR8ujQtFZ/A9mxbeoQJRtfoXUMqPoH+
+        sG3pESYomeMCUvEJ9IdtS48wQckcF5CKT6A/bFt6hAlK5riAVHwC/WHb0iNMUDLHBaTiE+gP25YeYYKS
+        OS4gFZ9Af9i29AgT3GjoShw9LYQFadfL6AKN1Ieot18E9peKT2A/ti09wgTjgM7FzSISVCCprUm9/SLM
+        /lLxCezDtqVHmGAc+AEQozDBjYaKYD4kGkGb50rFrLdfBPaXik9gP7YtPcIETTNdYeKNabH4P4ebQTTj
+        F9uWHpkJEpJBaYaKH740Jg4AJ28HS0a4Cj4QogfAFNuWHpkJEpIRLkKPhDXlih9dawiC77Ft6ZGZICGZ
+        4RrSQ6E06cPm4eHb2Lb0yEySkAxxAXr6p+X4UGGzj7/5RGMQ3MOWJVN+7l9LoJdzhDmE1l1xvRrmKUWa
+        Q2jd5QeAPcQzAGJ6N9BTDBW/MQx3clmSIXovDhPZ1hGqX873qaNvDqszV0ZLJkZwde5g9IkXJ1ebs9lP
+        60SKDh5pYsj5iyMlRTdxde5g0yeCFydXenP1AzMh+s1frfg3GHVu7mDTK4IXJ1d6n1U01Tlt9uVil+Li
+        3MGmVwQvTq4yQfC+mRDt86ViVz1ncJnz4FWvU9TbL2Y4zGSK3ofHhE7/vfSAj6hx1s53+StWVM0ZinT6
+        ZPuZDYeZTDXPzt6KCd2MAVDv3L9JmzOYYCuTK/1b9zczoXK7gGrn7q137t+kzRkcwTYmV3oT+xszoUfn
+        +0uK4LmB6RXBNiZXDWF4n5kQnQbOXZC3Ap4UDoAt3d2f0on81UyKjvb9IJAxfSLYxmSrIQi+g4nRbJ+P
+        zvWpo0uPlz0wdBH0iS1MvjJB0IvJeeqgzPUM67Utm/24HgSvikl5aiKW28Frkd4FfEUX/7yUjKd2EjUA
+        Mrnc3br4H0qJeGqHip+Y5wGo+Hqf9V9Mgg4AH5ztUU+8MqR+9/ZI0fMAC9fGll5fPvJZXkXihLnyYve0
+        tb39y3q0foCGtMx0q5OXDxcd+SILy6OXF5fHm09fmfgMry4xwnx5sVsqHPCF4TnTCJo3t/sPA2LB04SZ
+        M8GWuCW92X8AjXCh+ATmzZY4pGz2Fn3Qd9E0gTb7klnEk+fzaldf9e/kJw12xR01BsE20wA64Cu3z3/l
+        6rjaWcOEDEmEbXFHevPfbRpAR/tS8Reujaujb0/VNCNHEmFb3JFO+pRpAJ3qSQPg+b88WXi/vtoZOZIK
+        2+KOdNJFd/5OXJKfAD526UjJZAtpwMydYFvckT79+59pwMtl7vTNXpgWDUw6Zu4E2+KOdNIfmQaUu9Xr
+        B0BKpZMu2gU853cBbkknXdVB4AvvXz8IrHZmzqTCtrijTBC0mwbs96eBbkkPgCbTgMKFoHfk3YC/EJRG
+        KfUxnfiSaULLjLwVICZfy6tv+kvB6ZJO/IdoRJe/GeSQrt8QOm0a0ZQL1cEX/O1gZ7QlDL+oDfgnGvKT
+        6R514p3KD4QkGcyX7XBTDUFwp94S/AdNub09VK1P9aiRs9cfCUvTewGYK1uRTtHr35kw/K4u8pROdkn/
+        6x/+rJWkPuefyeXu1QUvevDDUx/0pC/bar/onX8dcJeUiKd+2F775Yu/PrC9dos2+xg4Pe27d6xHtR4f
+        Uo+cHBYnUvaUgj6yxfaqcMAH+3yaEv3BubyYoKcypo8E22yv6GjfDJh+833x68f0kmCb7RWf6q0ETJt9
+        KTFPdZheEmyzvdID4E0z4Jbjg2JiEfc/fajkr2a4CHnwwDOHSvzBdmyzvdK7gKL3/OgvZGBSJr74N7ij
+        q6PEH2zDNtsrDBgTMjnw4oja1ecHQIQ0PyG2YZvtFQYsFZ6g4p+5Yv/8extFufkJsR3bbK8wYKn4xNyl
+        ZN3YwbzwIc/VwP7Sd0hgP7bZXmHAUvGJs1flhG0F85KKXAnsL32HBPZjm+0VBiwVn5CStRnMSypyJbC/
+        9B0S2I9ttlcYsFR8QkrWZjAvqciVwP7Sd0hgP7bZXmHAUvGJKMGq5/+3DKnIlZDWYUIHwnRAbBafwHZs
+        s73CgKXiE1GCST0DkIpcCWkdiFOngVGCaRkAvzp5WH2jp6MA/YyfS+tAnBwASb0OEBV2cmla7ZsaKPmc
+        ltFn1Q4A564DYKK2g3lRUfMLE+ruwa6SzyJ2DxxUh169/m4jfiZ9hwT2Y5vtFQYsFZ+QkrUZzCurN/P0
+        OhsuR6gNtcXl0ndIYD+22V5hwFLxiaRfCJK49/HOAtJniPQdEtiPbbZXGLBUfGL+0hNiwraCeSE/faa3
+        MJXt2X+MqoeP9YptTKTvkMB+bLO9woCl4hPhH0fUGW1W3NcByp1/I1Jf4mt6E997qvRVtuEzg2p7Z/ld
+        BLYvB/Zjm+0VBiwVP6JwO7g3/jMA6fQLkfrtyXeq+T+XP56ht5n2ltklSO0lsB/bbK+S+ECI9CAGsh3i
+        3DPSXdXTzdSG2pp9KWeprYTZj2Cb7VWtj4TRY1BxDgIq/o9/XTlG4v6nBwqDYPvBdvWjpwbENpWgPtSX
+        cqXH4KQ2Ehgv22yvSh8K7RUT81SH6SXBNturrUGw1wyYHgvf/+yQmJxndUwvCbbZXvEfgr5gBk2bPT8I
+        6sP0kWCb7ZbeCuzBwJtyOdU82qNajg2uemDouQH6yBbbL30scBCD96wdtjcBymZv0QF3YgKetcHuJkeN
+        QXCP3iW8JSXjqY1M0v4QZKTNw8O3NeZyzXogTOpE3sCLRZ7VoeIn5u8Aenl5eXl5eSVUmzb9HztUQsSU
+        feATAAAAAElFTkSuQmCC
 </value>
   </data>
 </root>
