--- a/KutuphaneCore/Properties/Resources.resx
+++ b/KutuphaneCore/Properties/Resources.resx
@@ -160,6 +160,9 @@
   <data name="8675228_ic_fluent_notebook_sync_regular_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\8675228_ic_fluent_notebook_sync_regular_icon1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="6586125_account_avatar_person_profile_user_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\6586125_account_avatar_person_profile_user_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="3099383_student_man_icon1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\3099383_student_man_icon2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -169,7 +172,7 @@
   <data name="8675120_ic_fluent_notebook_add_regular_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\8675120_ic_fluent_notebook_add_regular_icon1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="6586125_account_avatar_person_profile_user_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\6586125_account_avatar_person_profile_user_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="728979_info_communication_data_help_information_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\728979_info_communication_data_help_information_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
